--- a/frontend/src/assets/styles/cmps/_GroupPreview.scss
+++ b/frontend/src/assets/styles/cmps/_GroupPreview.scss
@@ -23,7 +23,7 @@
   }
   
 
-  // width: max-content;
+  width: max-content;
   margin-bottom: 20px;
   position: relative;
 
